# computer_vision

./: 02_llm_triage_responses.ipynb  03_automl_object_detection.ipynb  README.md  README_Rendering_Defects_Prototype.md  main.py  overlay_bboxes.py  pyproject.toml  requirements.txt
artifacts/: G6YH19W3643-01_ROI.json  G6YH19W3643-ROI.json  G6YK36W3244-ROI.json  G6YK54W3653-ROI.json  J74Q10KAUG0-ROI.json
artifacts/backup/: proposals.json  proposals_reranked.json  proposals_reranked_by_hot_ratio.json
common/: image_genai.py  roi_highlighting.py  roi_hotspots.py  roi_identification.py  utils.py
common/.ipynb_checkpoints/: image_analysis-checkpoint.py
common/llm_data/: system_message_multimodal.txt  system_message_multimodal_v1_baseline.txt
